# groth_mindset_challenge

./: README.md  groth_mindset.py  main.py  pyproject.toml  requirements.txt
